ftpreview/dlli.h

typedef void *DWYCO_LIST;
typedef DWYCO_LIST DWYCO_UNSAVED_MSG_LIST;
typedef DWYCO_LIST DWYCO_SAVED_MSG_LIST;
typedef DWYCO_LIST DWYCO_SERVER_LIST;
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoVideoDisplayCallback)(int chan_id, void *img, int cols, int rows, int depth);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceCallback)(int chan_id, const char *name, const char *location, const char *uid, int len_uid, const char *call_type, int len_call_type);
typedef  void (DWYCOCALLCONV *DwycoZapAppearanceCallback)(int chan_id, const char *name, int size, const char *uid, int len_uid);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceDeathCallback)(int chan_id);
typedef  int (DWYCOCALLCONV *DwycoPublicChatInitCallback)(int chan_id);
typedef  int (DWYCOCALLCONV *DwycoPrivateChatInitCallback)(int chan_id, const char *not_used);
// NOTE: see comment at dwyco_command_from_keyboard regarding the commands
// and parameters that will show up here during a private chat.
typedef  int (DWYCOCALLCONV *DwycoPrivateChatDisplayCallback)(int chan_id, const char *com, int arg1, int arg2, const char *str, int len);
typedef  int (DWYCOCALLCONV *DwycoPublicChatDisplayCallback)(const char *who, int len_who, const char *line, int len_line, const char *uid, int len_uid);
typedef  void (DWYCOCALLCONV *DwycoAutoUpdateDownloadCallback)(int status);
// see "autoupdate check status" below for details on what the status is for this callback
typedef  void (DWYCOCALLCONV *DwycoAutoUpdateStatusCallback)(int status, const char *desc);
void DWYCOEXPORT dwyco_set_public_chat_init_callback(DwycoPublicChatInitCallback cb);
void DWYCOEXPORT dwyco_set_private_chat_init_callback(DwycoPrivateChatInitCallback cb);
void DWYCOEXPORT dwyco_set_private_chat_display_callback(DwycoPrivateChatDisplayCallback cb);
void DWYCOEXPORT dwyco_set_public_chat_display_callback(DwycoPublicChatDisplayCallback cb);
void DWYCOEXPORT dwyco_set_video_display_callback(DwycoVideoDisplayCallback cb);
int DWYCOEXPORT dwyco_get_refresh_users();
int DWYCOEXPORT dwyco_get_rescan_messages();
int DWYCOEXPORT dwyco_uid_online(const char *uid, int len_uid);
// this returns:
// 0 for offline
// 1 for online, not available
// 3 for online, available
int DWYCOEXPORT dwyco_uid_status(const char *uid, int len_uid);
void DWYCOEXPORT dwyco_uid_to_ip(const char *uid, int len_uid, int *can_do_direct, char **str_out);
int DWYCOEXPORT dwyco_load_users();
int DWYCOEXPORT dwyco_get_message_bodies(DWYCO_SAVED_MSG_LIST *list_out, const char *uid, int uid_len, int load_sent);
int DWYCOEXPORT dwyco_get_unsaved_messages(DWYCO_UNSAVED_MSG_LIST *list_out, const char *uid, int len_uid);
int DWYCOEXPORT dwyco_unsaved_message_to_body(DWYCO_SAVED_MSG_LIST *list_out, const char *msg_id);
void DWYCOEXPORT dwyco_pal_add(const char *user_id, int len_uid);
void DWYCOEXPORT dwyco_pal_delete(const char *user_id, int len_uid);
int DWYCOEXPORT dwyco_is_pal(const char *user_id, int len_uid);
DWYCO_LIST DWYCOEXPORT dwyco_pal_get_list();
void DWYCOEXPORT dwyco_pal_relogin();
int DWYCOEXPORT dwyco_is_ignored(const char *user_id, int len_uid);
void DWYCOEXPORT dwyco_ignore(const char *user_id, int len_uid);
void DWYCOEXPORT dwyco_unignore(const char *user_id, int len_uid);
void DWYCOEXPORT dwyco_session_ignore(const char *user_id, int len_uid);
void DWYCOEXPORT dwyco_always_visible(const char *uid, int len_uid, int val);
void DWYCOEXPORT dwyco_never_visible(const char *uid, int len_uid, int val);
int DWYCOEXPORT dwyco_is_never_visible(const char *uid, int len_uid);
int DWYCOEXPORT dwyco_is_always_visible(const char *uid, int len_uid);
DWYCO_LIST DWYCOEXPORT dwyco_ignore_list_get();
DWYCO_LIST DWYCOEXPORT dwyco_session_ignore_list_get();
DWYCO_LIST DWYCOEXPORT dwyco_uid_to_info(const char *user_id, int len_uid, int *cant_resolve_now);
int DWYCOEXPORT dwyco_delete_user(const char *uid, int uid_len);
int DWYCOEXPORT dwyco_is_capturing_video();
void DWYCOEXPORT dwyco_set_moron_dork_mode(int);
int DWYCOEXPORT dwyco_get_moron_dork_mode();
// there are some access functions for
// getting at the components of these
// lists. they are accessed basically like
// a 2-d array. all results are strings that
// must be copied out.

void DWYCOEXPORT dwyco_list_release(DWYCO_LIST l);
int DWYCOEXPORT dwyco_list_numelems(DWYCO_LIST l, int *rows, int *cols);
int DWYCOEXPORT dwyco_list_get(DWYCO_LIST l, int row, const char *col,
                               const char **out, int *len_out, int *type_out);
int DWYCOEXPORT dwyco_list_print(DWYCO_LIST l);
int DWYCOEXPORT dwyco_init();
int DWYCOEXPORT dwyco_exit();
int DWYCOEXPORT dwyco_empty_trash();
int DWYCOEXPORT dwyco_count_trashed_users();
int DWYCOEXPORT dwyco_service_channels(int *spin);
int DWYCOEXPORT dwyco_set_all_mute(int);
int DWYCOEXPORT dwyco_get_all_mute();
int DWYCOEXPORT dwyco_set_auto_squelch(int a);
int DWYCOEXPORT dwyco_get_auto_squelch();
void DWYCOEXPORT dwyco_set_full_duplex(int a);
int DWYCOEXPORT dwyco_get_full_duplex();
void DWYCOEXPORT dwyco_set_call_appearance_callback(DwycoCallAppearanceCallback cb);
void DWYCOEXPORT dwyco_set_zap_appearance_callback(DwycoZapAppearanceCallback cb);
void DWYCOEXPORT dwyco_set_call_appearance_death_callback(DwycoCallAppearanceDeathCallback cb);
int DWYCOEXPORT dwyco_call_accept(int id);
int DWYCOEXPORT dwyco_call_reject(int id, int session_ignore);
int DWYCOEXPORT dwyco_zap_accept(int id, int always_accept);
int DWYCOEXPORT dwyco_zap_reject(int id, int session_ignore);
int DWYCOEXPORT dwyco_get_server_list(DWYCO_SERVER_LIST *list_out, int *numlines);
// see notes in dlli.cpp regarding how these work on
// non-windows platforms
DWYCO_LIST DWYCOEXPORT dwyco_get_vfw_drivers();
int DWYCOEXPORT dwyco_start_vfw(int idx, void *main_hwnd, void *client_hwnd);
int DWYCOEXPORT dwyco_shutdown_vfw();
int DWYCOEXPORT dwyco_change_driver(int new_idx);
int DWYCOEXPORT dwyco_is_preview_on();
int DWYCOEXPORT dwyco_preview_on(void *display_window);
int DWYCOEXPORT dwyco_preview_off();
int DWYCOEXPORT dwyco_vfw_format();
int DWYCOEXPORT dwyco_vfw_source();
void DWYCOEXPORT dwyco_set_main_msg_window(void *h);
void DWYCOEXPORT dwyco_handle_msg(const char *msg, int msg_len, unsigned int message, unsigned int wp, unsigned int lp);
// give this function a set of files to be hashed to determine
// what version of the software is being used. the current windows
// client uses "icuii.exe" and "cdcdll.dll", for example.
// the contents of the files are concatenated and hashed.
void DWYCOEXPORT dwyco_setup_autoupdate(const char *f1, const char *f2, const char *f3, const char *f4);
// normally, an autoupdate query command is automatically sent when you
// connect to a chat server. if you need to do it at some later point, like
// during a dialog, call this function.
void DWYCOEXPORT dwyco_force_autoupdate_check();
// set the callback to be called when an autoupdate check is complete.
// see "autoupdate check status" codes above for possible outcomes.
void DWYCOEXPORT dwyco_set_autoupdate_status_callback(DwycoAutoUpdateStatusCallback sb);
int DWYCOEXPORT dwyco_start_autoupdate_download(DwycoStatusCallback cb, void *arg1, DwycoAutoUpdateDownloadCallback dcb);
void DWYCOEXPORT dwyco_abort_autoupdate_download();
// defunct
void DWYCOEXPORT dwyco_set_regcode(const char *s);
void DWYCOEXPORT dwyco_sub_get(const char **reg_out, int *len_out);