bld/cdc32/old/cdcdll.pas


function dwyco_get_vfw_drivers(): DWYCO_LIST; stdcall;
function dwyco_start_vfw(driver_idx: integer; main_hwnd: Pointer; client_hwnd: Pointer) : Integer; stdcall;
function dwyco_shutdown_vfw() : Integer; stdcall;
function dwyco_change_driver(new_idx : Integer) : Integer; stdcall;
function dwyco_is_preview_on() : Integer; stdcall;
function dwyco_preview_on(display_hwnd: Pointer) : Integer; stdcall;
function dwyco_preview_off() : Integer; stdcall;
function dwyco_vfw_format() : Integer; stdcall;
function dwyco_vfw_source() : Integer; stdcall;
procedure dwyco_set_main_msg_window(hwnd: Pointer); stdcall;
procedure dwyco_handle_msg(msg: PChar; msg_len: Integer; msgnum: Integer; wp: Integer; lp: Integer); stdcall;

{$ENDIF}

function dwyco_uid_online(uid: PChar; len_uid: Integer): Integer; stdcall;
// dwyco_uid_status returns:
// 0 for offline
// 1 for online, not available
// 3 for online, available
function  dwyco_uid_status(uid: Pchar; len_uid: Integer): Integer; stdcall;
function dwyco_uid_to_ip(uid: PChar; len_uid: Integer; var can_do_direct: Integer; var str_out:PChar): LongInt; stdcall;
procedure dwyco_pal_add(uid: PChar; len_uid: Integer); stdcall;
procedure dwyco_pal_delete(uid: PChar; len_uid: Integer); stdcall;
function dwyco_is_pal(uid: PChar; len_uid: Integer): Integer; stdcall;
function dwyco_pal_get_list() : DWYCO_LIST;stdcall;
procedure dwyco_pal_relogin();stdcall;
function dwyco_is_ignored(user_id: PChar; len_uid: Integer): integer;stdcall;
procedure dwyco_ignore(user_id: PChar; len_uid: Integer);stdcall;
procedure dwyco_unignore(user_id: PChar; len_uid: Integer);stdcall;
procedure dwyco_session_ignore(user_id: PChar; len_uid: Integer);stdcall;
function dwyco_ignore_list_get(): DWYCO_LIST;stdcall;
function dwyco_session_ignore_list_get(): DWYCO_LIST;stdcall;
procedure dwyco_add_old_timing(user_id: PChar; len_uid: Integer);stdcall;
procedure dwyco_del_old_timing(user_id: PChar; len_uid: Integer);stdcall;
function dwyco_uid_to_info(user_id: PChar; len_uid: Integer; var cant_resolve_now: integer): DWYCO_LIST;stdcall;
//2010.1
//NOTE: DND never really worked right
//procedure dwyco_set_dnd(dnd: Integer);stdcall;
//function dwyco_get_dnd(): Integer;stdcall;

procedure dwyco_set_moron_dork_mode(m: integer); stdcall;
function dwyco_get_moron_dork_mode(): integer;stdcall;
procedure dwyco_set_autosave_config(m: integer);stdcall;
procedure dwyco_set_auto_authenticate(m: integer);stdcall;

function dwyco_delete_user(uid: PChar; len_uid: Integer): Integer;stdcall;
function dwyco_empty_trash(): Integer;stdcall;
function dwyco_is_capturing_video(): Integer;stdcall;
function dwyco_count_trashed_users(): Integer;stdcall;

procedure dwyco_setup_autoupdate(f1: PChar; f2: PChar; f3: PChar; f4: PChar);stdcall;
procedure dwyco_force_autoupdate_check();stdcall;
procedure dwyco_set_autoupdate_status_callback(cb: DwycoAutoUpdateStatusCallback);stdcall;
function dwyco_start_autoupdate_download(cb: DwycoStatusCallback; arg1: Pointer; dcb: DwycoAutoUpdateDownloadCallback): Integer;stdcall;
procedure dwyco_abort_autoupdate_download();stdcall;

procedure dwyco_set_rating(rating: Integer);stdcall;
function dwyco_get_rating(): Integer;stdcall;

{ REGCODE and TRIAL functions }
{function dwyco_is_registered(): Integer; stdcall;}
{ WARNING: returns 1 for NOT EXPIRED, 0 otherwise}
{function dwyco_get_expired(): Integer; stdcall;}
procedure dwyco_set_regcode(s: PChar); stdcall;
procedure dwyco_sub_get(var code_out: PChar; var len_out: Integer); stdcall;

// 2010.1
//NOTE: pal visibility defunct as of NOV 2009
//{
//* val = 0 to UNset the attribute, nonzero SETS the attribute
//* setting to always-visible UNsets the never-visible attribute
//and vice-versa.
//* normal state is BOTH never-vis and always-vis OFF
//* each call to the set functions will cause a re-login to the
//pal server, so don't do them too often.
//}
//procedure dwyco_always_visible(uid: PChar; len_uid: Integer; val: Integer); stdcall;
//procedure dwyco_never_visible(uid: PChar; len_uid: Integer; val: Integer); stdcall;
//function dwyco_is_never_visible(uid: PChar; len_uid: Integer) : Integer; stdcall;
//function dwyco_is_always_visible(uid: PChar; len_uid: Integer) : Integer; stdcall;


{$IFDEF IMW32}
// EXTERNAL INSTANT MESSAGE SYSTEM INTERFACE
// note: the DLL internally maps external IM
// systems ids (uin for icq, login names for aim, for example)
// into dwyco uids (normally 80-bit unique identifiers).
// these uids act the same as normal DLL uids, except
// some operations are no-ops (like adding to
// the dwyco pal list), and some are handled internally
// for whatever system the uid is from (send message, for
// example, needs to send the messages via the proper
// messenger.
// unfortunately, there isn't an easy mapping back and
// forth between these uids because of differences in
// length and so on, so unless you are actively logged
// into a system, you won't be able to know what type
// of uid it is. this normally isn't a problem.

// external IM handling defines and function (ICQ, AIM)
// note: all uids will return as "dwyco" type if you
// are not logged into icq/aim, whatever. this is
// because we can't map uids to uin and back
// before we know the complete pal list from these
// other systems.
//#define DWYCO_EIM_SYSTEM_CANT_RESOLVE -1
const DWYCO_EIM_SYSTEM_DWYCO=0; // note: returned by pal_type, not used otherwise
const DWYCO_EIM_SYSTEM_ICQ=1;
const DWYCO_EIM_SYSTEM_AIM=2;
const DWYCO_EIM_SYSTEM_MSN=3;
const DWYCO_EIM_SYSTEM_YAHOO=4;

// these can be (and probably should be) called before
// dwyco_init in order to set up external IM auto-logins
procedure dwyco_eim_stop(which: Integer); stdcall;
procedure dwyco_eim_start(which: Integer; cb: DwycoEIMServerLoginCallback); stdcall;
function dwyco_eim_status(which: Integer) : Integer;  stdcall;
procedure dwyco_eim_set_acct_info(which: Integer; uin: PChar; pw: PChar );stdcall;
// END call before dwyco_init
// this takes a dwyco uid, and tells you what type of IM system it
// is from. should be used for display, and ui tweaks only.
function dwyco_pal_type(uid: Pchar; len_uid: Integer): Integer;stdcall;

procedure dwyco_eim_pal_add(eim: Integer; sn: PChar; len_sn: Integer; nick: PChar; len_nick: Integer);stdcall;
procedure dwyco_eim_pal_del(eim: Integer; sn: PChar; len_sn: Integer);stdcall;
{$ENDIF}

implementation

{$IFDEF WIN32}
{$IFDEF IMW32}
procedure dwyco_eim_stop; external 'CDCDLL.DLL';
procedure dwyco_eim_start; external 'CDCDLL.DLL';
procedure dwyco_eim_set_acct_info; external 'CDCDLL.DLL';
function dwyco_pal_type; external 'CDCDLL.DLL';
{$ENDIF}
function dwyco_uid_status; external 'CDCDLL.DLL';
function dwyco_set_public_chat_init_callback; external 'CDCDLL.DLL';
function dwyco_set_private_chat_init_callback; external 'CDCDLL.DLL';
function dwyco_set_private_chat_display_callback; external 'CDCDLL.DLL';
function dwyco_set_public_chat_display_callback; external 'CDCDLL.DLL';
procedure dwyco_set_video_display_callback; external 'CDCDLL.DLL';
function dwyco_get_refresh_users; external 'CDCDLL.DLL';
function dwyco_get_rescan_messages; external 'CDCDLL.DLL';
function dwyco_load_users; external 'CDCDLL.DLL';
function dwyco_get_user_list; external 'CDCDLL.DLL';
function dwyco_get_message_bodies; external 'CDCDLL.DLL';
function dwyco_get_unsaved_messages; external 'CDCDLL.DLL';
function dwyco_unsaved_message_to_body; external 'CDCDLL.DLL';
procedure dwyco_list_release; external 'CDCDLL.DLL';
function dwyco_list_numelems; external 'CDCDLL.DLL';
function dwyco_list_get; external 'CDCDLL.DLL';
function dwyco_list_print; external 'CDCDLL.DLL';
function dwyco_init; external 'CDCDLL.DLL';
function dwyco_exit; external 'CDCDLL.DLL';
function dwyco_service_channels; external 'CDCDLL.DLL';
function dwyco_set_all_mute; external 'CDCDLL.DLL';
function dwyco_get_all_mute; external 'CDCDLL.DLL';
function dwyco_set_auto_squelch; external 'CDCDLL.DLL';
function dwyco_get_auto_squelch; external 'CDCDLL.DLL';
procedure dwyco_set_full_duplex; external 'CDCDLL.DLL';
function dwyco_get_full_duplex; external 'CDCDLL.DLL';
//procedure dwyco_connect_all; external 'CDCDLL.DLL';
procedure dwyco_set_call_appearance_callback; external 'CDCDLL.DLL';
procedure dwyco_set_zap_appearance_callback; external 'CDCDLL.DLL';
procedure dwyco_set_call_appearance_death_callback; external 'CDCDLL.DLL';
function dwyco_call_accept; external 'CDCDLL.DLL';
function dwyco_call_reject; external 'CDCDLL.DLL';
function dwyco_zap_accept; external 'CDCDLL.DLL';
function dwyco_zap_reject; external 'CDCDLL.DLL';
procedure dwyco_set_directory_downloaded_callback; external 'CDCDLL.DLL';
// 2010.1
//function dwyco_directory_starting; external 'CDCDLL.DLL';
//function dwyco_directory_online; external 'CDCDLL.DLL';
//function dwyco_directory_downloading; external 'CDCDLL.DLL';

function dwyco_get_server_list; external 'CDCDLL.DLL';
// 2010.1
//function dwyco_switch_to_server; external 'CDCDLL.DLL';
//function dwyco_disconnect_server; external 'CDCDLL.DLL';
